remove com.sun.tools.javac.util.List from unit tests (#386)